tests/toy/neg/000734_mutation.toylang
program a = { a = if 0; } .
